--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -40,6 +40,7 @@ file.reference.org.apache.commons.beanutils.jar=lib\\libJasper\\org.apache.commo
 file.reference.poi-3.9.jar=lib\\libExcel\\poi-3.9.jar
 file.reference.poi-ooxml-3.9.jar=lib\\libExcel\\poi-ooxml-3.9.jar
 file.reference.poi-ooxml-schemas-3.7-beta1.jar=lib\\libExcel\\poi-ooxml-schemas-3.7-beta1.jar
+file.reference.primefaces.jar=lib\\primefaces\\primefaces.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -59,7 +60,8 @@ javac.classpath=\
     ${file.reference.poi-ooxml-3.9.jar}:\
     ${file.reference.poi-3.9.jar}:\
     ${file.reference.poi-ooxml-schemas-3.7-beta1.jar}:\
-    ${file.reference.dom4j-1.5.jar}
+    ${file.reference.dom4j-1.5.jar}:\
+    ${file.reference.primefaces.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
